# words

./: .firebaserc  FUTURE_OPTIMIZATION.md  PROGRESS.md  README.md  firebase.json  firestore.rules  index.html  main.py  manifest.json  openai_cache.json  pasted_text_1726623227282.txt  pyproject.toml  replit_zip_error_log.txt  sw.js
.cache/nix/: binary-cache-v6.sqlite
.cache/pypoetry/artifacts/61/77/0a/d9e7158e3c18756ee457497d2c2d6f09b3b29595c3e45a45534359ac4f/: openai-1.46.0-py3-none-any.whl
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.github/: inject.py
.github/workflows/: deploy.yml  gh-pages.yml
.local/state/replit/agent/: .agent_state_main.json  repl_state.json
.upm/: store.json
css/: styles.css
functions/: .env.example  index.js  package-lock.json  package.json
js/: app.js  app_v3.js
openai_chat_completion/: chat_request.py
static/: index.html
static/js/: app.js  app_v3.js
templates/: index.html
